# keepkey-vault

./: .gitignore  .gitmodules  CODEOWNERS  Makefile  PLAN.md  README.md  rmdir-result.txt
.claude/: settings.local.json
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  COIN-ADDITION-GUIDE.md  ELECTROBUN-FORK-PLAN.md  ELECTROBUN-FORK-USAGE.md  FIRMWARE-VS-BOOTLOADER-REBOOT-BUG.md  LLMs.txt  QA-1.2.0-FINDINGS.md  README.md  RETRO-WINDOWS-AUTO-UPDATE.md  WINDOWS-DEV-MODE.md  WINDOWS-ELECTROBUN-UPGRADE-INVESTIGATION.md  WINDOWS-OOB-REGRESSION.md  WINDOWS-QUIRKS.md  WINDOWS-STARTUP-OPTIMIZATION-PLAN.md  collect-externals-deep-dive.md  device-protocol-fork.md  elctrobun.md  electrobun-architecture.md  evidence-2026-03-22-poisoned-state.md  firmware-update-retro.md  troubleshooting-windows-build.md  windows-build-pipeline.md
docs/coins/: README.md
docs/firmware/: BUILD.md  FIRMWARE-CLEAR-SIGNING-HANDOFF.md  README.md  SIGNED-METADATA-CLEAR-SIGNING-PLAN.md
docs/release-notes/: firmware-7.14.0-release-plan.md  firmware-feature-review-2026-03-12.md
firmware/: .gitignore  README.md  download.ts  manifest.json  releases.json
projects/keepkey-vault/zcash-cli/: Cargo.toml  build.rs
projects/keepkey-vault/zcash-cli/proto/: compact_formats.proto  service.proto
projects/keepkey-vault/zcash-cli/src/: main.rs  pczt_builder.rs  scanner.rs  wallet_db.rs  zip244.rs
release-windows/: SHA256SUMS.txt
scripts/: KeepKeyVault.exe.manifest  batch-upload-evm-icons.ts  build-windows-production.ps1  fix-missing-icons.ts  installer.iss  wrapper-launcher.zig
(+454 files in other folders)
